Removed marker interfaces. POJO mustn't implement interfaces